[build-system]
requires = ["setuptools>=62.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panther"
version = "0.0.1"
authors = [
  { name="ElNiak", email="christophe.crochet@uclouvain.be" },
]
description = "Python formal verification package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
]
keywords = ["quic", "formal verification", "z3", "ivy", "shadow", "network"]
dependencies= [
    'flask',
    "flask_session",
    "django",
    "requests",
    "Flask-Cors==4.0.1",
    "npf-web-extension",
    'pexpect',
    'chardet',
    'gperf',
    'pandas',
    'scandir',
    'ply',
    'PyQt5',
    'plantuml',
    'pygraphviz',
    'requests',
    'scapy',
    'termcolor',
    'terminal_banner'
]

[project.urls]
Homepage = "https://github.com/ElNiak/PANTHER"
